--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@angular/platform-browser": "^11.0.8",
     "@angular/platform-browser-dynamic": "^11.0.8",
     "@angular/router": "^11.0.8",
+    "moment": "^2.29.1",
+    "ngx-moment": "^5.0.0",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "^6.6.3",
     "semantic-ui-css": "^2.4.1",
     "tslib": "^2.1.0",
