--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular/platform-browser": "^11.0.8",
     "@angular/platform-browser-dynamic": "^11.0.8",
     "@angular/router": "^11.0.8",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "ngx-moment": "^5.0.0",
     "ngx-toastr": "^13.2.1",
